text color fixed and more info

--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 	<div class="line"></div>
 	<div class="content">
 		<p>Here you can find my projects</p>
+		<p>For example this website.</p>
 	</div>
 </body>
 </html>
