--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 	</div>
 	<div class="line"></div>
 	<div class="content">
-		<p>Hello, this is my website its currently in the works</p>
+		<h2>Hello, this is my website its currently in development</h2>
+	</div>
+	<div class="cardbackground">
+		<div class="cardtext">
+			<p>On here I am basically just trying out stuff, trying to learn html, css and maybe even js. While I do that I am also trying to make it look somewhat good. Maybe I will also try to make this into something that has an actual function aside from the website showing text.</p>
+		</div>
 	</div>
 </body>
 </html>
