--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,9 @@
 	</div>
 	<div class="line"></div>
 	<div class="content">
-		<p>Here you can find my projects</p>
-		<p>For example this website.</p>
+		<h2>Here are some of my projects</h2>
+		<p>- This website (lordabgrund.github.io)</p>
+		<p></p>
 	</div>
 </body>
 </html>
