--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>lordabgrund</title>
+	<title>Lordabgrund</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
 </head>
 <body>
 	<div class="header">
