--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lordabgrund</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./imgs/favicon3.png" type="image/x-icon">
 </head>
 <body>
 	<div class="header">
