--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="line"></div>
 	<div class="content">
-		<h2>Hello, this is my website its currently in development</h2>
+		<h2>Hello, this is my website its currently under development</h2>
 	</div>
 	<div class="cardbackground">
 		<div class="cardtext">
