--- a/socials.html
+++ b/socials.html
@@ -19,10 +19,12 @@
 	<div class="line"></div>
 	<div class="content">
 		<h2>Here are my socials links</h2>
+		<div class="cardbackground2">
 		<div class="imglinks">
 		<a href="https://www.youtube.com/channel/UCRjfAMTa4AXU5DuDdK1qVdQ"><img src="./imgs/youtube2.png"></a>
 		<a href="https://www.twitch.tv/lordabgrund"><img src="./imgs/twitch1.png"></a>	
 		<a href="https://www.discord.gg"><img src="./imgs/discord1.png"></a>
+		</div>
 		</div>
 	</div>
 </body>
