fixed hyperlinks centered

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<div class="content">
 		<h2>Hello, this is my website its currently under development</h2>
 	</div>
-	<div class="cardbackground">
+	<nav class="cardbackground">
 		<div class="cardtext">
 			<p>On here I am basically just trying out stuff, trying to learn html, css and maybe even js. While I do that I am also trying to make it look somewhat good. Maybe I will also try to make this into something that has an actual function aside from the website showing text.</p>
 		</div>
-	</div>
+	</nav>
 </body>
 </html>
