--- a/socials.html
+++ b/socials.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="line"></div>
 	<div class="content">
-		<h2>Here are my socials links</h2>
+		<h2 class="socialtitle">Here are my socials links</h2>
 		<div class="cardbackground2">
 		<div class="imglinks">
 		<a href="https://www.youtube.com/channel/UCRjfAMTa4AXU5DuDdK1qVdQ"><img src="./imgs/youtube2.png"></a>
