--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 	</div>
 	<div class="line"></div>
 	<div class="content">
-		<h2>Hello, this is my website its currently under development</h2>
-	</div>
-	<nav class="cardbackground">
-		<div class="cardtext">
+		<h2>Hello this is my website</h2>
+		<nav class="cardbackground">
+			<div class="cardtext">
 			<p>On here I am basically just trying out stuff, trying to learn html, css and maybe even js. While I do that I am also trying to make it look somewhat good. Maybe I will also try to make this into something that has an actual function aside from the website showing text.</p>
-		</div>
-	</nav>
+			</div>
+		</nav>
+	</div>
+	
 </body>
 </html>
