--- a/socials.html
+++ b/socials.html
@@ -23,7 +23,7 @@
 		<div class="imglinks">
 		<a href="https://www.youtube.com/channel/UCRjfAMTa4AXU5DuDdK1qVdQ"><img src="./imgs/youtube2.png"></a>
 		<a href="https://www.twitch.tv/lordabgrund"><img src="./imgs/twitch1.png"></a>	
-		<a href="https://discord.gg/RDHH9FZzDu"><img src="./imgs/discord1.png"></a>
+		<a href="https://www.discord.gg"><img src="./imgs/discord1.png"></a>
 		</div>
 		</div>
 	</div>
